--- a/Hidden Search Widget/style.css
+++ b/Hidden Search Widget/style.css
@@ -28,6 +28,7 @@ body {
   height: 50px;
   width: 50px;
   transition: width 0.3s ease;
+  border-radius: 3rem;
 }
 
 .btn {
@@ -41,6 +42,7 @@ body {
   height: 50px;
   width: 50px;
   transition: transform 0.3s ease;
+  border-radius: 3rem;
 }
 
 .btn:focus,
@@ -49,9 +51,14 @@ body {
 }
 
 .search.active .input {
-  width: 200px;
+  width: 250px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
 .search.active .btn {
   transform: translateX(198px);
+  border-radius: 3rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
