--- a/Scroll Animation/style.css
+++ b/Scroll Animation/style.css
@@ -1,12 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #efedd6;
-  font-family: "Roboto", sans-serif;
+  background-color: #f9f9f9;
+  font-family: "Lato", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,11 +16,15 @@ body {
 }
 
 h1 {
-  margin: 10px;
+  margin: 4rem auto;
+  text-transform: uppercase;
+  font-size: 3rem;
+  color: #6a5acd;
 }
 
 .box {
-  background-color: steelblue;
+  background: url("https://images.unsplash.com/photo-1632201717104-b7c59bc026ee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGZ1dHVyaXN0aWN8ZW58MHwwfDB8fHwy")
+    no-repeat center;
   color: #fff;
   display: flex;
   align-items: center;
