--- a/Split Landing Page/style.css
+++ b/Split Landing Page/style.css
@@ -3,8 +3,11 @@
 :root {
   --left-bg-color: rgba(87, 84, 236, 0.7);
   --right-bg-color: rgba(43, 43, 43, 0.8);
+  --left-btn-hover-color: rgba(87, 84, 236, 1);
+  --right-btn-hover-color: rgba(28, 122, 28, 1);
 }
 
+/* GENERAL STYLES______________________________________________________________________________________________________ */
 * {
   box-sizing: border-box;
 }
@@ -26,6 +29,8 @@ h1 {
   white-space: nowrap;
 }
 
+/* BUTTON STYLES___________________________________________________________________________________________________________ */
+
 .btn {
   position: absolute;
   display: flex;
@@ -43,6 +48,18 @@ h1 {
   width: 15rem;
   padding: 1.5rem;
 }
+
+.split.left .btn:hover {
+  background-color: var(--left-btn-hover-color);
+  border-color: var(--left-btn-hover-color);
+}
+
+.split.right .btn:hover {
+  background-color: var(--right-btn-hover-color);
+  border-color: var(--right-btn-hover-color);
+}
+
+/* CONTAINER/SPLIT STYLES_____________________________________________________________________________________________________________ */
 
 .container {
   position: relative;
