--- a/Split Landing Page/style.css
+++ b/Split Landing Page/style.css
@@ -7,6 +7,7 @@
   --right-btn-hover-color: rgba(28, 122, 28, 1);
   --hover-width: 75%;
   --other-width: 25%;
+  --speed: 1000ms;
 }
 
 /* GENERAL STYLES______________________________________________________________________________________________________ */
@@ -107,6 +108,13 @@ h1 {
   background-color: var(--right-bg-color);
 }
 
+.split.right,
+.split.left,
+.split.right::before,
+.split.left::before {
+  transition: all var(--speed) ease-in-out;
+}
+
 /* SPLIT HOVER STYLES_____________________________________________________________________________________________________________ */
 .hover-left .left {
   width: var(--hover-width);
@@ -115,7 +123,7 @@ h1 {
 .hover-left .right {
   width: var(--other-width);
 }
-.hover.right .right {
+.hover-right .right {
   width: var(--hover-width);
 }
 
