--- a/Sound Board/style.css
+++ b/Sound Board/style.css
@@ -27,3 +27,12 @@ body {
   font-size: 1.2rem;
   font-family: inherit;
 }
+
+.btn:focus {
+  outline: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
